# Inova-Defect-Detection-Model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
inova_defect_detection/: __init__.py  data.py  model.py  registration.py
runs/v01/: README.md  constants.py  dataset.py  eval_anomaly1k.txt  eval_full.txt  evaluate.py  export.py  model.py  prepare.py  registration.py  train.py  trainer.py
runs/v02/: README.md  constants.py  dataset.py  eval_best.txt  probe_curl.py  probe_curl.txt  probe_shortfeed.txt  probe_streaking.txt  train.py  trainer.py  visualize.py
runs/v03/: README.md  constants.py  eval_best.txt  evaluate.py  inova_demo.py  replay.py  replay_events.jsonl  serve.py  train.py  visualize.py
runs/v04/: README.md  constants.py  dataset.py  eval_best.txt  evaluate.py  model.py  train.py  trainer.py  visualize.py
runs/v05/: README.md  constants.py  dataset.py  deploy.sh  eval_best.txt  evaluate.py  fit_pixstat.py  model.py  pixstat_shortfeed.npz  serve.py  train.py  trainer.py  visualize.py
tests/: test_import.py
