[project]
name = "inova-defect-detection"
version = "0.1.0"
description = "Layer-wise powder-bed defect detection for the SLS4All Inova MK1"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "pillow",
    "opencv-python-headless",
    "datasets",
    # driver 570 on this box serves CUDA <= 12.8; torch 2.12+ ships cu130
    # wheels that silently fall back to CPU. Same pin as AMT.
    "torch==2.11.*",
    "torchvision",
    "transformers",
    "tqdm",
    "matplotlib",
    "wandb",
]

[project.optional-dependencies]
export = ["onnx", "onnxruntime"]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.uv]
package = false

# driver 570 serves CUDA <= 12.8; PyPI torch wheels ship cu130 and fall
# back to CPU silently. Same cu126 build AMT runs on this machine.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[tool.pytest.ini_options]
pythonpath = ["."]
